--- a/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
@@ -7,4 +7,4 @@
 <h2>Index</h2>
 @Html.ActionLink("ເພີ່ມລາຍການ", "CreateItem", "Customer")
 @Html.ActionLink("ລາຍການສີນຄ້າ", "ViewItems", "Customer")
-@Html.ActionLink("ຂໍ້ມູນສ່ວນໂຕ", "Profile", "Customer")
+@Html.ActionLink("ຂໍ້ມູນສ່ວນໂຕ", "CProfile", "Customer")
