--- a/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
@@ -45,7 +45,8 @@
     </div>
 </div>
 
-<script>
+<script type="text/javascript">
+    
     function DeleteConfirm(id) {
         let htmlMakeup = "";
         htmlMakeup += '<lable>ທ່ານແນ່ໃຈທີ່ຈະລຶບແລ້ວບໍ</lable>';
