--- a/AnusithExpress.web.mvc/Views/InitData/Database.cshtml
+++ b/AnusithExpress.web.mvc/Views/InitData/Database.cshtml
@@ -1,14 +1,18 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    
+    <title>Database</title>
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div> 
+        @ViewBag.Result
     </div>
 </body>
 </html>
