--- a/AnusithExpress.web.mvc/Views/Customer/CUpdateProfile.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/CUpdateProfile.cshtml
@@ -7,7 +7,7 @@
 <h2>CUpdateProfile</h2>
 
 <div>
-    @using (Html.BeginForm("CUpdateProfile", "Account", FormMethod.Post))
+    @using (Html.BeginForm("CUpdateProfile", "Customer", FormMethod.Post))
     {
         <div class="form-group">
             @Html.Label("ເບີໂທ", new { @class = "control-label col-md-2" })
