--- a/AnusithExpress.web.mvc/Views/Customer/CreateUpdateItem.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/CreateUpdateItem.cshtml
@@ -45,7 +45,8 @@
             @Html.TextBoxFor(m => m.ItemValue_Dollar)
         </div>
         <input type="submit" name="submit" value="ບັນທຶກລາຍການ" />
-
+        <a href="@Url.Action("ViewItems","Customer")">ກັບໄປຫາລາຍການສີນຄ້າ</a>
+        <a href="@Url.Action("Index","Customer")">ກັບໄປຫນ້າຫລັກ</a>
     }
 
 </div>
