--- a/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <h2>Index</h2>
-@Html.ActionLink("ເພີ່ມລາຍການ", "CreateItem", "Customer")
+@Html.ActionLink("ເພີ່ມລາຍການ", "CreateUpdateItem", "Customer")
 @Html.ActionLink("ລາຍການສີນຄ້າ", "ViewItems", "Customer")
 @Html.ActionLink("ຂໍ້ມູນສ່ວນໂຕ", "CProfile", "Customer")
