--- a/AnusithExpress.web.mvc/Views/Shared/_LayoutAdmin.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_LayoutAdmin.cshtml
@@ -7,6 +7,11 @@
 </head>
 <body>
     <div>
+        <div class="container">
+            <div class=" nav navbar-dark">
+                dfdsf
+            </div>
+        </div>
         @RenderBody()
     </div>
 </body>
