--- a/AnusithExpress.web.mvc/Views/Shared/_LayoutAdmin.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_LayoutAdmin.cshtml
@@ -11,6 +11,9 @@
             <div class=" nav navbar-dark">
                 dfdsf
             </div>
+            <div class="">
+                ddd
+            </div>
         </div>
         @RenderBody()
     </div>
