--- a/AnusithExpress.web.mvc/Views/Delivery/ViewItemToSend.cshtml
+++ b/AnusithExpress.web.mvc/Views/Delivery/ViewItemToSend.cshtml
@@ -24,19 +24,25 @@
             <tr>
                 <th><input type="checkbox" name="checkall" onclick="toggle(this)" /></th>
                 <th>ເລກຕິດຕາມ</th>
-                <th>ປະເພດເຄື່ອງ</th>
-                <th>ສະຖານະ</th>
+                <th>ຜຸ້ຮັບ</th>
+                <th>ເບີໂທຕິດຕໍ່</th>
+                <th>ລາຍລະອຽດ</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
+           
+            <tr class="clickable-row" data-href="@Url.Action("ShowItem","Delivery",new { id = item.Id})">
+                
                     <td><input type="checkbox" name="itemsId" value="@item.Id" />@Html.Hidden("customerId", item.CustomerId)</td>
                     <td>@item.TrackingNumber</td>
-                    <td>@item.ItemName</td>
-                    <td>@item.Status</td>
-                </tr>
+                    <td>@item.ReceiverName</td>
+                    <td>@item.ReceipverPhone</td>
+                    <td>@item.Description</td>
+
+            </tr>
+          
             }
 
         </tbody>
@@ -45,6 +51,11 @@
 }
 
 <script type="text/javascript" language="javascript">
+    $(document).ready(function () {
+        $(".clickable-row").click(function () {
+            window.location = $(this).data("href");
+        });
+    });
     function toggle(source) {
         let checkboxes = document.getElementsByName("itemsId");
         for (var i = 0, n = checkboxes.length; i < n; i++) {
