late night update

--- a/AnusithExpress.web.mvc/Views/Delivery/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Delivery/Index.cshtml
@@ -10,3 +10,4 @@
 
 <a href="@Url.Action("ViewItemToSend","Delivery")">ສີນຄ້າຕ້ອງໄປສົ່ງ</a>
 
+<a href="@Url.Action("CreateItem","Delivery")">ເພີ່ມສີນຄ້າ</a>
