--- a/AnusithExpress.web.mvc/Views/Delivery/ShowItem.cshtml
+++ b/AnusithExpress.web.mvc/Views/Delivery/ShowItem.cshtml
@@ -3,17 +3,14 @@
     ViewBag.Title = "ShowItem";
     Layout = "~/Views/Shared/_LayoutDelivery.cshtml";
 }
-
 <h2>ShowItem</h2>
 @model AnousithExpress.Data.SingleViewModels.ItemSingleModel
-
 
 <label>ເບີໂທລູກຄ້າ</label>@Model.CustomerPhonenumber <br />
 <label>ເລກຕິດຕາມ</label>@Model.TrackingNumber <br />
 <label>ສະຖານະ</label>@Model.Status <br />
 <label>ປະເພດສີນຄ້າ</label>@Model.ItemName <br />
 <label>ເກັບເງີນປາຍທາງ</label>
-
 @if (Model.ItemValue_Kip != null)
 {
     <label>@Model.ItemValue_Kip ກີບ</label>
@@ -30,3 +27,7 @@
 {
     <label>ບໍ່ມີ</label>
 }
+<a href="@Url.Action("CreateItem", "Delivery")">GoBack to create more</a>
+<a href="@Url.Action("ViewItemToSend", "Delivery")">Go to View item to send</a>
+<a href="@Url.Action("BackButton", "Delivery")">Go to View item to send</a>
+
