--- a/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
@@ -10,6 +10,7 @@
     <div>ສີນຄ້າຕ້ອງໄປຮັບ</div>
  
 </div>
+<a href="@Url.Action("Accounts","AdminAccount")">ບັນຊີຜູ້ໃຊ້ງານ</a>
 <div>
     <div>ລູກຄ້າ</div>
 </div>
