commit the change on admin customer view

--- a/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
@@ -11,6 +11,11 @@
  
 </div>
 <a href="@Url.Action("Accounts","AdminAccount")">ບັນຊີຜູ້ໃຊ້ງານ</a>
+
+<a href="@Url.Action("Customer","Admin")">ລຸກຄ້າ</a>
 <div>
     <div>ລູກຄ້າ</div>
+</div>
+<div>
+
 </div>
