--- a/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
@@ -13,9 +13,5 @@
 <a href="@Url.Action("Accounts","AdminAccount")">ບັນຊີຜູ້ໃຊ້ງານ</a>
 
 <a href="@Url.Action("Customer","Admin")">ລຸກຄ້າ</a>
-<div>
-    <div>ລູກຄ້າ</div>
-</div>
-<div>
 
-</div>
+<a href="@Url.Action("CreateUpdateItem","Admin")">ສ້າງສີນຄ້າ</a>
