--- a/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Index.cshtml
@@ -15,3 +15,5 @@
 <a href="@Url.Action("Customer","Admin")">ລຸກຄ້າ</a>
 
 <a href="@Url.Action("CreateUpdateItem","Admin")">ສ້າງສີນຄ້າ</a>
+
+<a href="@Url.Action("Index","Consolidate")">ສັງລວມ</a>
