--- a/AnusithExpress.web.mvc/Views/Account/ULogin.cshtml
+++ b/AnusithExpress.web.mvc/Views/Account/ULogin.cshtml
@@ -1,28 +1,74 @@
-﻿
-@{
-    Layout = null;
+﻿<div>
+    @{
+        Layout = null;
+    }
+
+    <!DOCTYPE html>
+
+    <html>
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <title>ULogin</title>
+        <link href="~/Styles/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/Styles/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="~/Styles/css/datepicker.css" rel="stylesheet" />
+        <link href="~/Styles/css/styles.css" rel="stylesheet" />
+        <style type="text/css">
+            @@import url("/LaoFont/style.css");
+
+            * {
+                font-family: Phetsarath_OT;
+                font-size: 18px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-danger">
+                    <div class="panel-heading">ອານຸສິດຂົນສົ່ງ</div>
+                    <div class="panel-body">
+                        @using (Html.BeginForm("ULogin", "Account", FormMethod.Post))
+    {
+                                     
+                            
+                            <div class="form-group">
+                                @Html.Label("ຊື່ຜູ້ໃຊ້", new { @class = "control-label" })
+                                @Html.TextBox("username", null, new { @class = "form-control", @name = "phonenumber" })
+                                @* @Html.ValidationMessageFor(m => m.ItemName)*@
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ລະຫັດ", new { @class = "control-label" })
+                                @Html.Password("password",null, new { @class = "form-control", @name = "password" })
+                                @Html.Hidden("admin", "true")
+                                @* @Html.ValidationMessageFor(m => m.ItemName)*@
+                            </div>
+                            <button type="submit" class="btn btn-primary" name="submit"><span class="glyphicon glyphicon-log-in"></span> ເຂົ້າສູ່ລະບົບ</button>
+                      
+                       @*<input class=" btn btn-primary" type="submit" name="submit" value="ເຂົ້າສູ່ລະບົບ" />*@
+                          
+
+                           
+
+                 
+
+
+
+                  
 }
 
-<!DOCTYPE html>
+                    </div>
+                </div>
+            </div><!-- /.col-->
+        </div><!-- /.row -->
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ULogin</title>
-</head>
-<body>
-    <div>
-        <div>
-            @using (Html.BeginForm("ULogin", "Account", FormMethod.Post, new { @class = "form-control" }))
-            {
-                @Html.Label("ຊື່ຜູ້ໃຊ້", new { @class = "control-label" })
-                @Html.TextBox("username", "", new { @clas = "form-control", @name = "phonenumber" })
-                @Html.Label("ລະຫັດຜ່ານ", new { @class = "control-label" })
-                @Html.Password("password", "", new { @clas = "form-control", @name = "password" })
-                @Html.Hidden("admin", "true")
-                <input type="submit" name="submit" value="ເຂົ້າສູ່ລະບົບ" />
-            }
-        </div>
-    </div>
-</body>
+
+
+
+
+
+
+
+    
+    </body>
 </html>
