--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -6,7 +6,7 @@
     </a>
     <ul class="children collapse" id="sub-item-1">
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("CreateItem","Delivery")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມລາຍການສີນຄ້າ
             </a>
         </li>
@@ -29,10 +29,10 @@
 </li>
 
 <li class="parent ">
-    <a data-toggle="collapse" href="#sub-item-1">
+    <a data-toggle="collapse" href="#sub-item-2">
         <em class="fa fa-navicon">&nbsp;</em> ພະນັກງານສົ່ງເຄື່ອງ <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
     </a>
-    <ul class="children collapse" id="sub-item-1">
+    <ul class="children collapse" id="sub-item-2">
         <li>
             <a class="" href="#">
                 <span class="fa fa-arrow-right">&nbsp;</span> ສີນຄ້າທີຕ້ອງໄປຮັບ
@@ -52,10 +52,10 @@
 </li>
 
 <li class="parent ">
-    <a data-toggle="collapse" href="#sub-item-1">
+    <a data-toggle="collapse" href="#sub-item-3">
         <em class="fa fa-navicon">&nbsp;</em> ຫລັງຮ້ານ <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
     </a>
-    <ul class="children collapse" id="sub-item-1">
+    <ul class="children collapse" id="sub-item-3">
         <li>
             <a class="" href="#">
                 <span class="fa fa-arrow-right">&nbsp;</span> ລາຍຊື່ລູກຄ້າ
