--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -11,7 +11,7 @@
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("ViewItems","Customer")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ລາຍການສີນຄ້າ
             </a>
         </li>
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("CProfile","Customer")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ຂໍ້ມູນສ່ວນຕົວ
             </a>
         </li>
@@ -34,17 +34,17 @@
     </a>
     <ul class="children collapse" id="sub-item-2">
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("ViewItemToGet","Delivery")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ສີນຄ້າທີຕ້ອງໄປຮັບ
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("ViewItemToSend","Delivery")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ສີນຄ້າທີ່ຕ້ອງໄປສົ່ງ
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("CreateItem","Delivery")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມສີນຄ້າ
             </a>
         </li>
@@ -57,12 +57,12 @@
     </a>
     <ul class="children collapse" id="sub-item-3">
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("Customer","Admin")"">
                 <span class="fa fa-arrow-right">&nbsp;</span> ລາຍຊື່ລູກຄ້າ
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("CreateItem","Delivery")"">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມລາຍການ
             </a>
         </li>
@@ -72,7 +72,7 @@
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("Accounts","AdminAccount")"">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມຜູ້ໃຊ້ງານ
             </a>
         </li>
