--- a/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "ViewItems";
-    Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 @model List<AnousithExpress.Data.SingleViewModels.ItemSingleModel>
 <h2>ViewItems</h2>
@@ -9,7 +9,7 @@
     @ViewBag.Message
 </div>
 <div>
-    <table>
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>ເລກຕິດຕາມ</th>
