--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -57,12 +57,12 @@
     </a>
     <ul class="children collapse" id="sub-item-3">
         <li>
-            <a class="" href="@Url.Action("Customer","Admin")"">
+            <a class="" href="@Url.Action("Customer","Admin")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ລາຍຊື່ລູກຄ້າ
             </a>
         </li>
         <li>
-            <a class="" href="@Url.Action("CreateItem","Delivery")"">
+            <a class="" href="@Url.Action("CreateItem","Delivery")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມລາຍການ
             </a>
         </li>
@@ -72,7 +72,7 @@
             </a>
         </li>
         <li>
-            <a class="" href="@Url.Action("Accounts","AdminAccount")"">
+            <a class="" href="@Url.Action("Accounts","AdminAccount")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມຜູ້ໃຊ້ງານ
             </a>
         </li>
