--- a/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
+++ b/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
@@ -9,45 +9,81 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>CRegister</title>
+    <link href="~/Styles/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Styles/css/styles.css" rel="stylesheet" />
+    <style type="text/css">
+        @@import url("/LaoFont/style.css");
+
+        * {
+            font-family: Phetsarath_OT;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
     <div>
         @ViewBag.Message
     </div>
     <div>
-        @using (Html.BeginForm("CRegister", "Account", FormMethod.Post))
-        {
-            <div class="form-group">
-                @Html.Label("ເບີໂທ", new  {@class="control-label col-md-2" })
-                @Html.TextBoxFor(m => m.Phonenumber, new { @class = "form-control col-md-10" })
-                @Html.ValidationMessageFor(m => m.Phonenumber)
-                @ViewBag.DuplicateMessage
+        <div class=" row">
+            <div class="col-md-2"></div>
+            <div class="col-md-9">
+                <div class="panel panel-primary">
+                    <div class=" panel panel-heading"><span class="glyphicon glyphicon-"></span> ສະໜັກສະມາຊິກ</div>
+                    <div class="panel panel-body">
+
+                        @using (Html.BeginForm("CRegister", "Account", FormMethod.Post))
+                        {
+                            <div class="form-group">
+                                @Html.Label("ຊື່ ແລະ ນາມສະກຸນ", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control col-md-10" })
+                                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
+                                @ViewBag.DuplicateMessage
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ເບີໂທ", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.Phonenumber, new { @class = "form-control col-md-10" })
+                                @Html.ValidationMessageFor(m => m.Phonenumber)
+                                @ViewBag.DuplicateMessage
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ລະຫັດ", new { @class = "control-label col-md-2" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control col-md-10" })
+                                @Html.ValidationMessageFor(m => m.Password)
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ທີ່ຢູ່", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.Address, new { @class = "form-control col-md-10" })
+                                @Html.ValidationMessageFor(m => m.Address)
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນກີບ", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.BCEL_Kip, new { @class = "form-control col-md-10" })
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນບາດ", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.BCEL_Baht, new { @class = "form-control col-md-10" })
+                            </div>
+                            <div class="form-group">
+                                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນໂດລາ", new { @class = "control-label col-md-2" })
+                                @Html.TextBoxFor(m => m.BCEL_Dollar, new { @class = "form-control col-md-10" })
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-primary" type="submit" name="register" value="">ລົງທະບຽນ</button>
+                                <a class=" btn btn-primary" href="@Url.Action("CLogin","Account")">ກັບຄືນສູ່ຫນ້າລ໋ອກອີນ</a>
+                            </div>
+
+                        }
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                @Html.Label("ລະຫັດ", new { @class = "control-label col-md-2" })
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control col-md-10" })
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-            <div class="form-group">
-                @Html.Label("ທີ່ຢູ່", new { @class = "control-label col-md-2" })
-                @Html.TextBoxFor(m => m.Address, new { @class = "form-control col-md-10" })
-                @Html.ValidationMessageFor(m => m.Address)
-            </div>
-            <div class="form-group">
-                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນກີບ", new { @class = "control-label col-md-2" })
-                @Html.TextBoxFor(m => m.BCEL_Kip, new { @class = "form-control col-md-10" })
-            </div>
-            <div class="form-group">
-                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນບາດ", new { @class = "control-label col-md-2" })
-                @Html.TextBoxFor(m => m.BCEL_Baht, new { @class = "form-control col-md-10" })
-            </div>
-            <div class="form-group">
-                @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນໂດລາ", new { @class = "control-label col-md-2" })
-                @Html.TextBoxFor(m => m.BCEL_Dollar, new { @class = "form-control col-md-10" })
-            </div>
-            <input type="submit" name="register" value="ລົງທະບຽນ" />
-            <a href="@Url.Action("CLogin","Account")">ກັບຄືນສູ່ຫນ້າລ໋ອກອີນ</a>
-        }
+
+            <div class="col-md-2"></div>
+        </div>
+
     </div>
+    <script src="~/Styles/js/jquery-1.11.1.min.js"></script>
+    <script src="~/Styles/js/bootstrap.js"></script>
 </body>
 </html>
