--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -25,6 +25,11 @@
                 <span class="fa fa-arrow-right">&nbsp;</span> ຂໍ້ມູນສ່ວນຕົວ
             </a>
         </li>
+        <li>
+            <a class="" href="@Url.Action("CRegister","Account")">
+                <span class="fa fa-arrow-right">&nbsp;</span> ສະໜັກສະມາຊິກ
+            </a>
+        </li>
     </ul>
 </li>
 
