--- a/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
+++ b/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
@@ -68,9 +68,9 @@
                                 @Html.Label("ເລກບັນຊີ BCEL ສະກຸນເງີນໂດລາ", new { @class = "control-label col-md-2" })
                                 @Html.TextBoxFor(m => m.BCEL_Dollar, new { @class = "form-control col-md-10" })
                             </div>
-                            <div class="form-group">
-                                <button class="btn btn-primary" type="submit" name="register" value="">ລົງທະບຽນ</button>
-                                <a class=" btn btn-primary" href="@Url.Action("CLogin","Account")">ກັບຄືນສູ່ຫນ້າລ໋ອກອີນ</a>
+                            <div class="form-group" style="margin-top:10px;">
+                                <button style=" margin-top:10px;" class="btn btn-primary col-md-2" type="submit" name="register" ><span class="glyphicon glyphicon glyphicon-registration-mark"></span> ລົງທະບຽນ</button>
+                                <a style="margin-top: 10px; margin-left:5px;" class=" btn btn-warning col-md-2" href="@Url.Action("CLogin","Account")"><span class="glyphicon glyphicon glyphicon-arrow-left"></span> ກັບຄືນສູ່ຫນ້າລ໋ອກອີນ</a>
                             </div>
 
                         }
